--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@10play/tentap-editor": "^0.4.55",
+    "@expo-google-fonts/inter": "^0.2.3",
+    "@expo-google-fonts/merriweather": "^0.2.3",
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-masked-view/masked-view": "0.3.0",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "expo": "~50.0.15",
+    "expo-font": "~11.10.3",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.11.0",
     "react": "18.2.0",
@@ -23,6 +25,7 @@
     "react-native-gesture-handler": "~2.14.0",
     "react-native-get-random-values": "~1.8.0",
     "react-native-paper": "^5.12.3",
+    "react-native-pell-rich-editor": "^1.9.0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-webview": "13.6.4",
     "uuid": "^9.0.1"
